OC-DS-P7-FS Exploitation des variables conservées par les méthodes de features selection et constitution des dataframes prêts pour le machine learning, nettoyés, encodés, features engineering et selection effectués pour le train set, le train set avec imputation n°1 et le train set avec imputation n°2.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ OC-DS-P7-MODELLING/sauvegarde/
 OC-DS-P7-MODELLING/notebooks/aide.txt
 OC-DS-P7-MODELLING/notebooks/.ipynb_checkpoints/
 OC-DS-P7-MODELLING/notebooks/__pycache__/
+OC-DS-P7-MODELLING/notebooks/test_imp1_set.csv
+OC-DS-P7-MODELLING/notebooks/test_imp2_set.csv
+OC-DS-P7-MODELLING/notebooks/test_set.csv
+OC-DS-P7-MODELLING/notebooks/train_imp1_set.csv
+OC-DS-P7-MODELLING/notebooks/train_imp2_set.csv
+OC-DS-P7-MODELLING/notebooks/train_set.csv
